[package]
name = "HeartbeatAI-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
widestring = "1.0.2"


[dependencies.windows-sys]
version = "0.52.0"
features = ["Win32_System", "Win32_System_Threading", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_ProcessStatus", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_SystemServices", "Win32_System_SystemInformation", "Win32_System_Memory_NonVolatile", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_System_WindowsProgramming", "Win32_System_LibraryLoader"]