[package]
name = "HeartbeatAI-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
widestring = "1.0.2"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10"
digest = "0.10.7"



[dependencies.windows-sys]
version = "0.52.0"
features = ["Win32_System", "Win32_System_Threading", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_ProcessStatus", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_SystemServices", "Win32_System_SystemInformation", "Win32_System_Memory_NonVolatile", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_System_WindowsProgramming", "Win32_System_LibraryLoader", "Win32_Security", "Win32_System_SecurityCenter", "Win32_System_Services", "Win32_Security_Authorization"]